# polymarket-analysis

./: .gitignore  pyproject.toml
src/polymarket_analysis/: charts.py  cli.py  data.py  processing.py
tests/: test_data.py  test_processing.py
