[project]
name = "polymarket-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "scipy>=1.17.1",
]

[project.scripts]
polymarket-analysis = "polymarket_analysis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_analysis"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
